--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "framer-motion": "^12.9.4",
     "next": "15.3.1",
     "openai": "^4.96.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
   },
