--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openai": "^4.96.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
