--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
     "@openrouter/ai-sdk-provider": "^0.4.5",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "ai": "^4.3.10",
     "clsx": "^2.1.1",
