--- a/package.json
+++ b/package.json
@@ -11,22 +11,33 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
+    "@langchain/textsplitters": "^0.1.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "ai": "^4.3.10",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.9.4",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "openai": "^4.96.2",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
   },
@@ -34,12 +45,14 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   },
   "engines": {
