feat: update upload storage logic

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@langchain/textsplitters": "^0.1.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-hover-card": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "ai": "^4.3.10",
