--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
+    "@dqbd/tiktoken": "^1.0.21",
     "@langchain/textsplitters": "^0.1.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-dialog": "^1.1.13",
@@ -44,6 +45,7 @@
     "react-resizable": "^3.0.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
+    "tiktoken": "^1.0.21",
     "uuid": "^11.1.0",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
