--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.9.4",
+    "js-tiktoken": "^1.0.20",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
@@ -45,7 +46,6 @@
     "react-resizable": "^3.0.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "tiktoken": "^1.0.21",
     "uuid": "^11.1.0",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
