--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.9.4",
+    "highlight.js": "^11.11.1",
     "js-tiktoken": "^1.0.20",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
@@ -44,6 +45,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
