--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
     "@dqbd/tiktoken": "^1.0.21",
+    "@google/genai": "^1.0.1",
     "@langchain/textsplitters": "^0.1.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-dialog": "^1.1.13",
@@ -50,6 +51,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
+    "wav": "^1.0.2",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
   },
@@ -61,6 +63,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
+    "@types/wav": "^1.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
