--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^9.2.1",
     "react-resizable": "^3.0.5",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.2",
