--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
     "@dqbd/tiktoken": "^1.0.21",
