--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@agentic/ai-sdk": "^7.6.5",
+    "@agentic/firecrawl": "^7.6.7",
     "@agentic/stdlib": "^7.6.5",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.20",
