--- a/package.json
+++ b/package.json
@@ -48,28 +48,22 @@
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
-    "react-pdf": "^9.2.1",
     "react-resizable": "^3.0.5",
-    "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
-    "zod": "^3.24.3",
-    "zod-to-json-schema": "^3.24.5"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
