feat: support csv

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@ai-sdk/react": "^1.2.9",
     "@dqbd/tiktoken": "^1.0.21",
     "@google/genai": "^1.0.1",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.61",
     "@langchain/textsplitters": "^0.1.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-dialog": "^1.1.13",
@@ -36,6 +38,7 @@
     "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-dsv": "^2.0.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
@@ -43,6 +46,7 @@
     "framer-motion": "^12.9.4",
     "highlight.js": "^11.11.1",
     "js-tiktoken": "^1.0.20",
+    "langchain": "^0.3.29",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
