--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "dev": "next dev --turbopack ",
     "build": "next build",
     "start": "next start",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:introspect": "drizzle-kit introspect",
+    "db:studio": "drizzle-kit studio",
+    "db:sync": "tsx db/sync-schema.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -41,6 +47,8 @@
     "d3-dsv": "^2.0.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.0.1",
+    "drizzle-orm": "^0.44.2",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.9.4",
@@ -52,6 +60,7 @@
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -73,6 +82,7 @@
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
     "@types/wav": "^1.0.4",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
