refactor: remove all not important features

--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "db:push": "drizzle-kit push",
     "db:introspect": "drizzle-kit introspect",
     "db:studio": "drizzle-kit studio",
-    "db:sync": "tsx db/sync-schema.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@agentic/ai-sdk": "^7.6.5",
-    "@agentic/firecrawl": "^7.6.7",
-    "@agentic/stdlib": "^7.6.5",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
@@ -44,19 +41,16 @@
     "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "d3-dsv": "^2.0.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "dotenv": "^17.0.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.2",
-    "echarts": "^5.6.0",
-    "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.9.4",
     "highlight.js": "^11.11.1",
     "js-tiktoken": "^1.0.20",
     "langchain": "^0.3.29",
     "lucide-react": "^0.509.0",
-    "next": "15.3.1",
+    "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
@@ -85,6 +79,7 @@
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "null-loader": "^4.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
