--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "js-tiktoken": "^1.0.20",
     "langchain": "^0.3.29",
     "lucide-react": "^0.509.0",
+    "mammoth": "^1.9.1",
     "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
@@ -65,6 +66,7 @@
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
+    "word-extractor": "^1.0.4",
     "zod": "^3.24.3"
   },
   "devDependencies": {
