--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ai-sdk/react": "^1.2.9",
     "@dqbd/tiktoken": "^1.0.21",
     "@google/genai": "^1.0.1",
+    "@hookform/resolvers": "^5.1.1",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
     "@langchain/textsplitters": "^0.1.0",
@@ -29,7 +30,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.13",
-    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-separator": "^1.1.7",
@@ -61,6 +62,7 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
@@ -70,7 +72,7 @@
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
     "word-extractor": "^1.0.4",
-    "zod": "^3.24.3"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
