--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "@agentic/ai-sdk": "^7.6.5",
     "@ai-sdk/google": "^1.2.18",
-    "@ai-sdk/openai": "^1.3.20",
-    "@ai-sdk/react": "^1.2.9",
+    "@ai-sdk/openai": "^2.0.0-beta.11",
+    "@ai-sdk/react": "^2.0.0-beta.24",
     "@dqbd/tiktoken": "^1.0.21",
     "@google/genai": "^1.0.1",
     "@hookform/resolvers": "^5.1.1",
@@ -42,7 +42,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
-    "ai": "^4.3.10",
+    "ai": "^5.0.0-beta.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -72,7 +72,7 @@
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
     "word-extractor": "^1.0.4",
-    "zod": "^3.25.76"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
