--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.509.0",
     "mammoth": "^1.9.1",
     "next": "^15.3.5",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
