--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.0-beta.11",
-    "@ai-sdk/react": "^2.0.0-beta.24",
+    "@ai-sdk/openai": "^2.0.0",
+    "@ai-sdk/react": "^2.0.0",
     "@hookform/resolvers": "^5.1.1",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
@@ -27,6 +27,7 @@
     "@radix-ui/react-hover-card": "^1.1.13",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
@@ -34,11 +35,13 @@
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/react-stripe-js": "^3.8.1",
+    "@stripe/stripe-js": "^7.7.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
-    "ai": "^5.0.0-beta.24",
+    "ai": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -65,6 +68,7 @@
     "react-resizable": "^3.0.5",
     "rehype-highlight": "^7.0.2",
     "sonner": "^2.0.6",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
