--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "pdf-parse": "^1.1.1",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
