--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack ",
     "build": "next build",
+    "build:embed": "cd embed && npm run build",
     "start": "next start",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -87,13 +88,17 @@
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
     "@types/wav": "^1.0.4",
+    "@vitejs/plugin-react": "^5.0.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "null-loader": "^4.0.1",
     "tailwindcss": "^4",
+    "terser": "^5.43.1",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^7.1.3",
+    "vite-plugin-dts": "^4.5.4"
   },
   "engines": {
     "node": ">=22"
