--- a/package.json
+++ b/package.json
@@ -24,39 +24,45 @@
     "@openrouter/ai-sdk-provider": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.13",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.8",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@stripe/react-stripe-js": "^3.8.1",
     "@stripe/stripe-js": "^7.7.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
-    "ai": "^5.0.30",
+    "@xyflow/react": "^12.9.3",
+    "ai": "^5.0.95",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.2",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.4",
     "highlight.js": "^11.11.1",
     "js-tiktoken": "^1.0.20",
     "langchain": "^0.3.29",
     "lucide-react": "^0.509.0",
     "mammoth": "^1.9.1",
+    "motion": "^12.23.24",
+    "nanoid": "^5.1.6",
     "next": "^15.3.5",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
@@ -71,9 +77,13 @@
     "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
     "rehype-highlight": "^7.0.2",
+    "shiki": "^3.15.0",
     "sonner": "^2.0.6",
+    "streamdown": "^1.5.1",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "uuid": "^11.1.0",
     "wav": "^1.0.2",
     "word-extractor": "^1.0.4",
