--- a/embed/package.json
+++ b/embed/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.8",
+    "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
