--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack ",
     "build": "next build",
-    "build:embed": "cd embed && npm run build",
+    "build:embed": "cd embed && npm run build && cp dist/style.css ../public/embed-style.css && npm run build:lib",
     "start": "next start",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/react": "^2.0.8",
+    "@docaider/embed": "file:./embed",
     "@hookform/resolvers": "^5.1.1",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
