--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/react": "^2.0.8",
     "@docaider/embed": "file:./embed",
+    "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^5.1.1",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
