--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/react": "^2.0.8",
-    "@docaider/embed": "file:./embed",
     "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^5.1.1",
     "@langchain/community": "^0.3.47",
@@ -54,6 +53,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "docaider-embed": "^0.0.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "^8.6.0",
@@ -71,9 +71,9 @@
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
     "postgres": "^3.4.7",
-    "react": "^19.0.0",
+    "react": "19.2.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -114,5 +114,9 @@
   },
   "engines": {
     "node": ">=22"
+  },
+  "overrides": {
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   }
 }
