--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
+    "react-syntax-highlighter": "^16.1.0",
     "rehype-highlight": "^7.0.2",
     "shiki": "^3.15.0",
     "sonner": "^2.0.6",
