--- a/embed/package.json
+++ b/embed/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docaider-embed",
-  "version": "0.0.5",
+  "version": "0.0.16",
   "description": "AI-powered embed chat widget for Docaider",
   "keywords": [
     "ai",
@@ -79,8 +79,8 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.0",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.0.0",
     "@vitejs/plugin-vue": "^6.0.2",
