--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "mcp_client",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "embed"
-  ],
   "scripts": {
     "dev": "next dev --turbopack ",
     "build": "npm run build:embed && next build",
-    "build:embed": "cd embed && npm run build && npm run build:lib && cp dist/style.css ../public/embed-style.css",
+    "build:embed": "cd embed && npm install && npm run build && npm run build:lib && cp dist/style.css ../public/embed-style.css",
     "start": "next start",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -56,7 +53,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "docaider-embed": "^0.0.5",
+    "docaider-embed": "^0.0.6",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "^8.6.0",
@@ -100,7 +97,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
-    "@types/react": "^19",
+    "@types/react": "19.2.7",
     "@types/react-dom": "^19",
     "@types/react-resizable": "^3.0.8",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -119,9 +116,5 @@
   },
   "engines": {
     "node": ">=22"
-  },
-  "overrides": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
   }
 }
