--- a/embed/package.json
+++ b/embed/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docaider-embed",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "AI-powered embed chat widget for Docaider",
   "keywords": [
     "ai",
@@ -43,7 +43,8 @@
   "peerDependencies": {
     "react": ">=18",
     "react-dom": ">=18",
-    "vue": ">=3"
+    "vue": ">=3",
+    "katex": ">=0.16"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.8",
