--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack ",
-    "build": "npm run build:embed && next build",
-    "build:embed": "cp node_modules/docaider-embed/dist/style.css public/embed-style.css",
+    "build": "next build",
     "start": "next start",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
