refactor: Rework embed UI components, update styling, and streamline the build process with new and removed elements.

--- a/embed/tsconfig.build.json
+++ b/embed/tsconfig.build.json
@@ -5,7 +5,8 @@
     "emitDeclarationOnly": true,
     "noEmit": false,
     "outDir": "dist",
-    "allowImportingTsExtensions": false
+    "allowImportingTsExtensions": false,
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
