--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "@xyflow/react": "^12.9.3",
-    "ai": "^5.0.102",
+    "ai": "^5.0.104",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "docaider-embed": "^0.0.27",
+    "docaider-embed": "file:./embed",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "^8.6.0",
@@ -64,7 +64,7 @@
     "mammoth": "^1.9.1",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
-    "next": "^15.3.5",
+    "next": "16.0.6",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
@@ -79,9 +79,9 @@
     "react-resizable": "^3.0.5",
     "react-syntax-highlighter": "^16.1.0",
     "rehype-highlight": "^7.0.2",
-    "shiki": "^3.15.0",
+    "shiki": "^3.17.1",
     "sonner": "^2.0.6",
-    "streamdown": "^1.6.8",
+    "streamdown": "^1.6.9",
     "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.0",
     "tokenlens": "^1.3.1",
@@ -96,15 +96,15 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "@types/react-resizable": "^3.0.8",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/wav": "^1.0.4",
     "@vitejs/plugin-react": "^5.0.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "16.0.6",
     "null-loader": "^4.0.1",
     "tailwindcss": "^4",
     "terser": "^5.43.1",
