--- a/embed/package.json
+++ b/embed/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docaider-embed",
-  "version": "0.0.27",
+  "version": "0.0.29",
   "description": "AI-powered embed chat widget for Docaider",
   "keywords": [
     "ai",
@@ -20,6 +20,10 @@
     "dist",
     "README.md"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/docaider/docaider-embed.git"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -36,8 +40,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "build:styles": "node scripts/build-styles.js",
-    "build:lib": "npm run build:styles && vite build && vite build -c vite.lib.config.ts && tsc -p tsconfig.build.json && cp ../public/embed.css dist/style.css",
+    "build:lib": "vite build && vite build -c vite.lib.config.ts && tsc -p tsconfig.build.json && cp ../public/embed.css dist/style.css",
     "prepare": "npm run build:lib",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -46,34 +49,45 @@
   "peerDependencies": {
     "react": ">=18",
     "react-dom": ">=18",
-    "vue": ">=3",
-    "katex": ">=0.16"
+    "vue": ">=3"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.8",
     "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@tailwindcss/vite": "^4.1.12",
-    "ai": "^5.0.95",
+    "@xyflow/react": "^12.9.3",
+    "ai": "^5.0.104",
+    "character-entities-legacy": "^3.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.24",
+    "nanoid": "^5.1.6",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.3",
+    "shiki": "^3.17.1",
+    "streamdown": "^1.6.9",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
+    "tokenlens": "^1.3.1",
     "tw-animate-css": "^1.3.7",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^3.25.76"
@@ -81,10 +95,8 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.0",
-    "@types/react": "19.2.0",
-    "@types/react-dom": "19.2.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "^5.1.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
