--- a/embed/package.json
+++ b/embed/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docaider-embed",
-"version": "0.2.4",
+"version": "0.2.6",
   "description": "AI-powered embed chat widget for Docaider",
   "keywords": [
     "ai",
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/docaider/docaider-embed.git"
+    "url": "https://github.com/niawjunior/docaider.git"
   },
   "exports": {
     ".": {
