--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.23",
     "@ai-sdk/react": "^2.0.8",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^5.1.1",
     "@langchain/community": "^0.3.47",
