--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-query-devtools": "^5.76.1",
     "@xyflow/react": "^12.9.3",
     "ai": "^5.0.104",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -97,6 +98,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "19.2.0",
