chore: Update Next.js and React ecosystem dependencies to their latest patch versions.

--- a/package.json
+++ b/package.json
@@ -68,15 +68,15 @@
     "mammoth": "^1.9.1",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
     "postgres": "^3.4.7",
-    "react": "19.2.0",
+    "react": "^19.2.1",
     "react-colorful": "^5.6.1",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -101,15 +101,15 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
-    "@types/react": "19.2.0",
-    "@types/react-dom": "19.2.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-resizable": "^3.0.8",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/wav": "^1.0.4",
     "@vitejs/plugin-react": "^5.0.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.6",
+    "eslint-config-next": "^16.0.7",
     "null-loader": "^4.0.1",
     "tailwindcss": "^4",
     "terser": "^5.43.1",
