--- a/embed/package.json
+++ b/embed/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docaider-embed",
-"version": "0.3.9",
+  "version": "0.3.9",
   "description": "AI-powered embed chat widget for Docaider",
   "keywords": [
     "ai",
@@ -47,8 +47,8 @@
     "prepublishOnly": "npm run build:lib"
   },
   "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "vue": ">=3"
   },
   "dependencies": {
