--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@sparticuz/chromium-min": "^143.0.0",
     "@stripe/react-stripe-js": "^3.8.1",
     "@stripe/stripe-js": "^7.7.0",
     "@supabase/ssr": "^0.6.1",
@@ -74,6 +75,7 @@
     "openai": "^4.96.2",
     "pdf-parse": "^1.1.1",
     "postgres": "^3.4.7",
+    "puppeteer-core": "^24.33.0",
     "react": "^19.2.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.2.1",
