--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react": "^19.2.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.2.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
